# FP3

./: FP3.opam  README.md  dune-project  mem_test.py
.github/workflows/: main.yml  workflow.yml
lib/compmath/: dune  interpolation.ml  interpolation.mli
lib/compmath/runner/: dune  generator.ml  runner.ml  window.ml
lib/io/: dune  input.ml  output.ml  output.mli  points_input.ml  points_input.mli
test/: dune  test_FP3.ml  test_interpolation.ml  test_runner.ml
